refactor: update file handling methods